[gd_scene load_steps=12 format=3 uid="uid://of44ppy7u3wm"]

[ext_resource type="PackedScene" uid="uid://benclgtj8klh2" path="res://scenes/game/lightsource.tscn" id="1_1v2xw"]
[ext_resource type="Script" path="res://scripts/options.gd" id="1_b4vdl"]
[ext_resource type="PackedScene" uid="uid://nwkrdpxyi24c" path="res://scenes/menu/menu_label.tscn" id="1_d4flf"]
[ext_resource type="PackedScene" uid="uid://bsocuc8jadvn" path="res://scenes/game/background.tscn" id="1_mb5si"]
[ext_resource type="PackedScene" uid="uid://dq1occgoug1j" path="res://scenes/menu/menu_button.tscn" id="2_1bovs"]
[ext_resource type="PackedScene" uid="uid://bdlq67ybgpb0c" path="res://scenes/game/directional_light.tscn" id="2_ol7ei"]
[ext_resource type="PackedScene" uid="uid://cofsiww4jdm6b" path="res://scenes/game/player.tscn" id="3_vfwyj"]
[ext_resource type="PackedScene" uid="uid://df0h0wsv4xd7o" path="res://scenes/game/tile_map.tscn" id="4_tn153"]
[ext_resource type="PackedScene" uid="uid://d4c2h08mawyt1" path="res://scenes/game/button.tscn" id="5_vqu1g"]
[ext_resource type="PackedScene" uid="uid://xt2oa6se6tcm" path="res://scenes/menu/black_screen.tscn" id="8_yoggo"]
[ext_resource type="Theme" uid="uid://bpo1clkk5v8f" path="res://misc/theme.tres" id="9_dt6pg"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4vdl")

[node name="Options2D" type="Node2D" parent="."]

[node name="Background" parent="Options2D" instance=ExtResource("1_mb5si")]

[node name="Lightsource" parent="Options2D" instance=ExtResource("1_1v2xw")]
position = Vector2(320, -120)
speed_scale_turn_on = 0.6
norm_sca = 2.0

[node name="DirectionalLight" parent="Options2D" instance=ExtResource("2_ol7ei")]

[node name="Player" parent="Options2D" instance=ExtResource("3_vfwyj")]
position = Vector2(151, 324)

[node name="TileMap" parent="Options2D" instance=ExtResource("4_tn153")]
layer_0/tile_data = PackedInt32Array(1376256, 0, 0, 1441792, 0, 0, 1376257, 0, 0, 1441793, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 1376260, 0, 0, 1441796, 0, 0, 1376261, 0, 0, 1441797, 0, 0, 1376262, 0, 0, 1441798, 0, 0, 1376263, 0, 0, 1441799, 0, 0, 1376264, 0, 0, 1441800, 0, 0, 1376265, 0, 0, 1441801, 0, 0, 1376266, 0, 0, 1441802, 0, 0, 1376267, 0, 0, 1441803, 0, 0, 1376268, 0, 0, 1441804, 0, 0, 1376269, 0, 0, 1441805, 0, 0, 1376270, 0, 0, 1441806, 0, 0, 1376271, 0, 0, 1441807, 0, 0, 1376272, 0, 0, 1441808, 0, 0, 1376273, 0, 0, 1441809, 0, 0, 1376274, 0, 0, 1441810, 0, 0, 1376275, 0, 0, 1441811, 0, 0, 1376276, 0, 0, 1441812, 0, 0, 1376277, 0, 0, 1441813, 0, 0, 1376278, 0, 0, 1441814, 0, 0, 1376279, 0, 0, 1441815, 0, 0, 1376280, 0, 0, 1441816, 0, 0, 1376281, 0, 0, 1441817, 0, 0, 1376282, 0, 0, 1441818, 0, 0, 1376283, 0, 0, 1441819, 0, 0, 1376284, 0, 0, 1441820, 0, 0, 1376285, 0, 0, 1441821, 0, 0, 1376286, 0, 0, 1441822, 0, 0, 1376287, 0, 0, 1441823, 0, 0, 1376288, 0, 0, 1441824, 0, 0, 1376289, 0, 0, 1441825, 0, 0, 1376290, 0, 0, 1441826, 0, 0, 1376291, 0, 0, 1441827, 0, 0, 1376292, 0, 0, 1441828, 0, 0, 1376293, 0, 0, 1441829, 0, 0, 1376294, 0, 0, 1441830, 0, 0, 1376295, 0, 0, 1441831, 0, 0, -65497, 0, 0, 39, 0, 0, 262183, 0, 0, 327719, 0, 0, 393255, 0, 0, 458791, 0, 0, 524327, 0, 0, 589863, 0, 0, 655399, 0, 0, 720935, 0, 0, 786471, 0, 0, 852007, 0, 0, 917543, 0, 0, 983079, 0, 0, 1048615, 0, 0, 1114151, 0, 0, 1179687, 0, 0, 1245223, 0, 0, 1310759, 0, 0, -65496, 0, 0, 40, 0, 0, 262184, 0, 0, 327720, 0, 0, 393256, 0, 0, 458792, 0, 0, 524328, 0, 0, 589864, 0, 0, 655400, 0, 0, 720936, 0, 0, 786472, 0, 0, 852008, 0, 0, 917544, 0, 0, 983080, 0, 0, 1048616, 0, 0, 1114152, 0, 0, 1179688, 0, 0, 1245224, 0, 0, 1310760, 0, 0, 1376296, 0, 0, 1441832, 0, 0, -1, 0, 0, -65536, 0, 0, 0, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1441791, 0, 0, 1507327, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, -65535, 0, 0, 1, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 38, 0, 0, 262182, 0, 0, 327718, 0, 0, 393254, 0, 0, 458790, 0, 0, 524326, 0, 0, 589862, 0, 0, 655398, 0, 0, 720934, 0, 0, 786470, 0, 0, 852006, 0, 0, 917542, 0, 0, 983078, 0, 0, 1048614, 0, 0, 1114150, 0, 0, 1179686, 0, 0, 1245222, 0, 0, 1310758, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 327682, 0, 0, 327683, 0, 0, -2, 0, 0, 65535, 0, 0, 65534, 0, 0, 327678, 0, 0, 327677, 0, 0, 327676, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 0, 0, 131067, 0, 0, 65533, 0, 0, 65532, 0, 0, 65531, 0, 0, 65576, 0, 0, 131112, 0, 0, 196648, 0, 0, 65575, 0, 0, 131111, 0, 0, 196647, 0, 0, 262181, 0, 0, 262180, 0, 0, 262179, 0, 0, 262178, 0, 0, 262177, 0, 0, 327713, 0, 0, 327712, 0, 0, 262176, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 65574, 0, 0, 327684, 0, 0, 262149, 0, 0, 327685, 0, 0, -65498, 0, 0, 131110, 0, 0, 196646, 0, 0, 262175, 0, 0, 327711, 0, 0, 1048579, 0, 0, 1048578, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1310722, 0, 0, 1245186, 0, 0, 1179650, 0, 0, 1114114, 0, 0, 458761, 0, 0, 458762, 0, 0, 524298, 131072, 1879048192, 524297, 131072, 536870912)

[node name="Button" parent="Options2D" instance=ExtResource("5_vqu1g")]
position = Vector2(546, 57)

[node name="BlackScreen" parent="Options2D" instance=ExtResource("8_yoggo")]

[node name="OptionsTitle" parent="." instance=ExtResource("1_d4flf")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.5
offset_right = 83.5
offset_bottom = 49.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "OPTIONS"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -35.0
offset_right = 113.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("9_dt6pg")
text = "SOUND EFFECTS"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("9_dt6pg")
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("9_dt6pg")
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("9_dt6pg")
max_value = 1.0
step = 0.01

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -37.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 24

[node name="BackButton" parent="MarginContainer" node_paths=PackedStringArray("lights") instance=ExtResource("2_1bovs")]
layout_mode = 2
text = "BACK"
path = "res://scenes/menu/menu.tscn"
lights = [NodePath("../../Options2D/Lightsource")]

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
